# noltaSympoPubTools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_contents/: get_started.rst
docs/_static/: custom.css
docs/_templates/: module.rst_t
docs/py_examples/: article_template.csv  awards.json  common.json  common_template.csv  data.json  data_with_pages.json  db_extract.csv  err_msg.csv  ex_award.json  ex_common.json  ex_compose_emails.py  ex_data.json  ex_err_sheet2dict.py  ex_get_ritems.py  ex_get_ritems.py.py  ex_get_ritems2.py  ex_json2meta_sessions.py  ex_json2papersTex.py  ex_json2papers_tex.py  ex_json2spanel_texs.py  ex_json2ssTex.py  ex_json2ss_tex.py  ex_load_articles.py  ex_load_common.py  ex_load_epapers_sheet.py  ex_load_err_sheet.py  ex_load_meta_articles.py  ex_load_meta_common.py  ex_load_meta_sessions.py  ex_load_revise_sheet.py  ex_load_session_sheet.py  ex_load_sessions.py  ex_merge_all_pdfs.py  ex_put_logo_with_text.py  ex_revise_sheet2json.py  ex_save_emails.py  ex_send_email.py  ex_show_revise_summary.py  ex_ss_organizers.json  ex_stamp_all_pdfs.py  (+17 more)
src/: __init__.py
src/json2metaCSV/: __main__.py  classes.py
src/json2tex/: papersTex.py  spanelTex.py  ssTex.py  tools.py
src/noltaSympoPubTools/: fundamentals.py  handleEmail.py  json2metaCSV.py  json2tex.py  models.py  pdfTools.py  requestRevise.py  sheet2json.py  test.py
src/pdfTools/: __main__.py
src/requestRevise/: __init__.py  __main__.py  email_tools.py
(+46 files in other folders)
