[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noltaSympoPubTools"
version = "0.1.0"
authors = [{name = "Yuu Miino"}]
description = "Tools for NOLTA Symposium Publication items."
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "numpy",
    "pypdf",
    "pydantic",
    "python-dotenv",
    "PdfStampTools@git+https://github.com/Yuu-Miino-NUE/PdfStampTools"
]

[tool.setuptools.package-data]
"*" = ["*.tex"]
