[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "noltaSympoPubTools"
dynamic = ["version"]
authors = [{name = "Yuu Miino"}]
description = "Tools for NOLTA Symposium Publication items."
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "numpy",
    "pypdf",
    "pydantic",
    "python-dotenv",
    "PdfStampTools@git+https://github.com/Yuu-Miino-NUE/PdfStampTools"
]

[tool.setuptools.package-data]
"*" = ["*.tex"]

[tool.setuptools_scm]
write_to = "src/noltaSympoPubTools/_version.py"